# quality_control_app

./: README.md  pyproject.toml
.github/workflows/: ci.yml
quality_control_app/: api.py  hooks.py  modules.txt
quality_control_app/fixtures/: activity.json  checklist.json
quality_control_app/quality_control_app/doctype/activity/: activity.js  activity.json  activity.py  test_activity.py
quality_control_app/quality_control_app/doctype/checklist/: checklist.js  checklist.json  checklist.py  test_checklist.py
quality_control_app/quality_control_app/doctype/checklist_form/: checklist_form.js  checklist_form.json  checklist_form.py  test_checklist_form.py
quality_control_app/quality_control_app/doctype/graceco_quality_control_checklist/: graceco_quality_control_checklist.js  graceco_quality_control_checklist.json  graceco_quality_control_checklist.py  test_graceco_quality_control_checklist.py
quality_control_app/quality_control_app/doctype/qc_activity_detail/: qc_activity_detail.js  qc_activity_detail.json  qc_activity_detail.py  test_qc_activity_detail.py
quality_control_app/quality_control_app/doctype/qc_checklist/: qc_checklist.js  qc_checklist.json  qc_checklist.py  test_qc_checklist.py
quality_control_app/quality_control_app/doctype/quality_control_activity/: quality_control_activity.json  quality_control_activity.py
quality_control_app/quality_control_app/doctype/quality_control_checklist/: quality_control_checklist.js  quality_control_checklist.json  quality_control_checklist.py  test_quality_control_checklist.py
(+2 files in other folders)
